get plants by user id

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "migrate": "knex migrate:latest",
     "rollback": "knex migrate:rollback",
     "seed": "knex seed:run",
+    "resetdb": "knex migrate:rollback && knex migrate:latest && knex seed:run",
     "migrateh": "heroku run knex migrate:latest -a watermyplantz",
     "rollbackh": "heroku run knex migrate:rollback -a watermyplantz",
     "databaseh": "heroku pg:psql -a watermyplantz",
